<resources>
    <string name="app_name">Form App</string>

    <!--Main-->
    <string name="text_hint_name">Name</string>
    <string name="text_hint_phone">Phone</string>
    <string name="text_hint_address">Address</string>
    <string name="text_hint_email">Email</string>
    <string name="text_label_upload_cv">Upload CV</string>
    <string name="text_label_submit">Submit</string>

    <!--Errors-->
    <string name="text_error_mobile">Invalid mobile number</string>
    <string name="text_error_email_id">Invalid email id</string>
    <string name="text_error_empty_field">Field cannot be empty</string>
    <string name="alert_connection_status_not_ok_title">Connection Error!</string>
    <string name="alert_connection_status_not_ok_message">Unable to connect to server!</string>
    <string name="alert_connection_lost_title">Oops!!</string>
    <string name="alert_connection_lost_message">Connection Lost! Please try again</string>
    <string name="text_login_to_continue">Please login to continue!</string>
</resources>