<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.main.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutName"
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="@dimen/material_dimen_constraint"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/guidelineTop">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_name"
                android:inputType="textPersonName"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPhone"
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="@dimen/material_dimen_constraint"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_dimen_ldpi"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_phone"
                android:inputType="phone"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutAddress"
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="@dimen/material_dimen_constraint"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_dimen_ldpi"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPhone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/text_hint_address"
                android:inputType="textMultiLine|textPostalAddress"
                android:lines="4" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="@dimen/material_dimen_constraint"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_dimen_ldpi"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAddress">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutCV"
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="@dimen/material_dimen_constraint"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_dimen_ldpi"
            app:layout_constraintEnd_toStartOf="@+id/materialButtonUploadCV"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextCV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_label_upload_cv"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButtonUploadCV"
            style="@style/AppTheme.Button.Dark"
            android:layout_width="@dimen/material_dimen_constraint"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/material_dimen_ldpi"
            android:text="@string/text_label_upload_cv"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutCV"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/textInputLayoutCV"
            app:layout_constraintTop_toTopOf="@+id/textInputLayoutCV" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButtonSubmit"
            style="@style/AppTheme.Button.Dark"
            android:layout_width="@dimen/material_dimen_constraint"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_dimen_mdpi"
            android:text="@string/text_label_submit"
            app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCV"
            app:layout_constraintVertical_bias="0" />

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/contentLoadingProgressBarMain"
            android:layout_width="@dimen/material_dimen_constraint"
            android:layout_height="wrap_content"
            android:theme="?android:attr/progressBarStyleLarge"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/guidelineTop" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/material_dimen_mdpi" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/material_dimen_mdpi" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/material_dimen_mdpi" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/material_dimen_mdpi" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>